secure_self_service/policies/tenant-cluster/signed-policies.yaml.signed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    cosign.sigstore.dev/message: H4sIAAAAAAAA/wDgAR/+H4sIAAAAAAAA/+ySX2/aMBTF88yn8DtycUIIG1IfAqQrf1pBxdjgzTiX4JHYqe0QBe3DT6Flo2m1fy/TpPxefHXukX1uclsmSVtMJqkCrbmIsKEKR0fs0E743vNoZ+N0W5pHAkKcypgzDvqqoEls/T6EEOK57ukkhFRP2/Zcy3bbjtO1vbbTsYjTtruehcgfvPHXZNpQZRGipDQ/8/2qXx3uP4GmfAlKcyl6aF8cQAl5xWXrYDf2XIQ9NIgzbUDNyl9fNBIwNKSG9hoICZpADx1ozENqACdU8C1ooxs6BVYaVBaDLguMEmrYrixLqCjOJUYKtMwUezKeKZ9+IeBKjsvOhfQUScFjxhXgytaeHOe458u/p/7xGjUGtJHqQsIIhFEcKpn2ULxQStJsE3M2KTvoK640EcIl/eDD6B7NPvanowGaBKuT+Mp6d7PPg3x [...]
    cosign.sigstore.dev/signature: MEYCIQD0RUelCFG+DvntD1qm9blv4wcXFNXGXi7rKSNHxtivxgIhAM1DWgrI4xaKOfxbIwHtDEXaFY4Q5L6GFfvk/+QyqRSn
  name: validate-manifests
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ClusterPolicy
          - Policy
    name: require-signed-policies
    validate:
      manifests:
        attestors:
        - entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyBg8yod24/wIcc5QqlVLtCfL+6Te
[...]
                -----END PUBLIC KEY-----
  validationFailureAction: enforce
